--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,12 +703,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 23,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
-        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
+        "outputId": "0a40ddf7-ea53-472b-fd18-cb64f353befe"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class '__main__.Matrix'>\n"
+          ]
+        }
+      ],
       "source": [
         "#si-matrix\n",
         "\n",
@@ -737,9 +749,9 @@
         "                    row = type(value[0])\n",
         "                for i in value:\n",
         "                    if type(i) is not int:\n",
-        "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "                      row = (float)\n",
         "                    elif type(i) is not float:\n",
-        "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "                      row = (int)\n",
         "                    elif type(i) is not list:\n",
         "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
@@ -792,8 +804,91 @@
         "                    string += str(value[i]) + \" \"\n",
         "        if shape[1]>1:\n",
         "            string += \"]\\n\\n\"\n",
-        "        return string"
+        "        return string\n",
+        "\n",
+        "matrixList = [[4,6,1,9,10,12,1,7],\n",
+        "\t\t\t  [1,2,3,4,5,6,7,8],\n",
+        "\t\t\t  [19,0,3,1,10,15,-1,-1]]\n",
+        "print(Matrix)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "class Matrix(object):\n",
+        "    \"\"\"\n",
+        "    Read the matrix and store as part of the class object\n",
+        "    \"\"\"\n",
+        "    def __init__(self, value = {}, dim=(1,1)):\n",
+        "        if isinstance(value, list):\n",
+        "            if len(value)>0:\n",
+        "                if type(value[0]) is int or type(value[0]) is float:\n",
+        "                    row = (int, float)\n",
+        "                else:\n",
+        "                    row = type(value[0])\n",
+        "                for i in value:\n",
+        "                    if type(i) is not int:\n",
+        "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "                    elif type(i) is not float:\n",
+        "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "                    elif type(i) is not list:\n",
+        "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "                if row is list:\n",
+        "                    lenInner = len(value[0])\n",
+        "                    for i in value:\n",
+        "                        if len(i) is not lenInner:\n",
+        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "                        for j in i:\n",
+        "                            if type(j) is not int and type(j) is not float:\n",
+        "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
+        "                self.value = value\n",
+        "                try:\n",
+        "                    self.shape = (len(value), len(value[0]))\n",
+        "                except:\n",
+        "                    self.shape = (len(value), 1)\n",
+        "            if matrix == []:\n",
+        "                for i in range(dim[0]):\n",
+        "                        row = []\n",
+        "                        for j in range(dim[1]):\n",
+        "                            row.append(1)\n",
+        "                        matrix.append(row)\n",
+        "                                \n",
+        "                value = matrix\n",
+        "                shape = dim\n",
+        "    \n",
+        "    \"\"\"\n",
+        "    Print the matrix to screen\n",
+        "    \"\"\"           \n",
+        "    def __repr__(self):\n",
+        "        string = \"  \"\n",
+        "        for i in range(shape[0]):\n",
+        "            if shape[1]>1:\n",
+        "                if i < shape[0]-1:\n",
+        "                    string += \"[ \"\n",
+        "                    for j in range(shape[1]):\n",
+        "                        string += str(value[i][j]) + \" \"\n",
+        "                    string += \"]\\n  \"\n",
+        "                else:\n",
+        "                    string += \"[ \"\n",
+        "                    for j in range(shape[1]):\n",
+        "                        string += str(value[i][j]) + \" \"\n",
+        "            else:\n",
+        "                if shape[0]==1:\n",
+        "                    string += \"[ \"\n",
+        "                if i < shape[0]-1:\n",
+        "                    if shape[1]>1:\n",
+        "                        string += \"[ \"\n",
+        "                    string += str(value[i]) + \"\\n  \"\n",
+        "                else:\n",
+        "                    string += str(value[i]) + \" \"\n",
+        "        if shape[1]>1:\n",
+        "            string += \"]\\n\\n\"\n",
+        "        return string"
+      ],
+      "metadata": {
+        "id": "19MpW1Sf-Ffk"
+      },
+      "id": "19MpW1Sf-Ffk"
     }
   ],
   "metadata": {
