--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,14 +703,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 24,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "0a40ddf7-ea53-472b-fd18-cb64f353befe"
+        "outputId": "ec43288c-bfeb-4ec8-9bac-9eafbe12be61"
       },
       "outputs": [
         {
@@ -749,9 +749,9 @@
         "                    row = type(value[0])\n",
         "                for i in value:\n",
         "                    if type(i) is not int:\n",
-        "                      row = (float)\n",
+        "                      return float, list\n",
         "                    elif type(i) is not float:\n",
-        "                      row = (int)\n",
+        "                      return int, list\n",
         "                    elif type(i) is not list:\n",
         "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
