--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -749,10 +749,10 @@
         "                    row = type(value[0])\n",
         "                for i in value:\n",
         "                    if type(i) is not int:\n",
-        "                      return float(i)\n",
+        "                      return float\n",
         "                    elif type(i) is not float:\n",
-        "                      return int(i)\n",
-        "                    elif type(i) is not list:\n",
+        "                      return int\n",
+        "                    else type(i) is not list:\n",
         "                      raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
         "                    lenInner = len(value[0])\n",
