--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -782,6 +782,8 @@
         "    \"\"\"\n",
         "    def __repr__(self):\n",
         "        string = \"  \"\n",
+        "        shape = self.shape\n",
+        "        value = self.value\n",
         "        for i in range(shape[0]):\n",
         "            if shape[1]>1:\n",
         "                if i < shape[0]-1:\n",
@@ -804,12 +806,7 @@
         "                    string += str(value[i]) + \" \"\n",
         "        if shape[1]>1:\n",
         "            string += \"]\\n\\n\"\n",
-        "        return string\n",
-        "\n",
-        "matrixList = [[4,6,1,9,10,12,1,7],\n",
-        "\t\t\t  [1,2,3,4,5,6,7,8],\n",
-        "\t\t\t  [19,0,3,1,10,15,-1,-1]]\n",
-        "print(Matrix)"
+        "        return string"
       ]
     },
     {
