--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -774,8 +774,8 @@
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                value = matrix\n",
-        "                shape = dim\n",
+        "                self.value = matrix\n",
+        "                self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
