--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -764,7 +764,8 @@
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            if matrix == []:\n",
+        "          else:\n",
+        "             matrix == []:\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
         "                        for j in range(dim[1]):\n",
