--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -749,7 +749,7 @@
         "                    row = type(value[0])\n",
         "                for i in value:\n",
         "                    for i in value:\n",
-        "                    if type(i) is not int, type(i) is not float, type(i) is not list:\n",
+        "                    if (type(i) is not int) & (type(i) is not float) & (type(i) is not list):\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
         "                    lenInner = len(value[0])\n",
