--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,24 +703,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "ec43288c-bfeb-4ec8-9bac-9eafbe12be61"
+        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class '__main__.Matrix'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-matrix\n",
         "\n",
@@ -764,16 +752,16 @@
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "          else:\n",
-        "              matrix == []:\n",
+        "            else:\n",
+        "              matrix = []\n",
         "              for i in range(dim[0]):\n",
         "                        row = []\n",
         "                        for j in range(dim[1]):\n",
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                self.value = matrix\n",
-        "                self.shape = dim\n",
+        "                        self.value = matrix\n",
+        "                        self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
