--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -712,87 +712,44 @@
       "source": [
         "#si-matrix\n",
         "\n",
-        "\"\"\"\n",
-        "\n",
-        "This class is intended to create a way to store the values and shape of a\n",
-        "matrix. The matrix can be imported as a list (matrix with single column,\n",
-        "or vector), or as a list of lists (2-dimensional matrices) via the value argument.\n",
-        "The class includes\n",
-        "an __init__ function to read in the matrix, or create a matrix of 1's of a\n",
-        "specific dimensionality. The class also includes a __repr__ function to\n",
-        "designate the method for printing the matrix to screen.\n",
-        "\n",
-        "\"\"\"\n",
-        "\n",
         "class Matrix(object):\n",
         "    \"\"\"\n",
-        "    Read the matrix and store as part of the class object\n",
+        "    This class is intended to create a way to store the values and shape of a\n",
+        "    matrix. The matrix can be imported as a list (matrix with single column,\n",
+        "    or vector), or as a list of lists (2-dimensional matrices) via the value argument.\n",
+        "    The class includes an __init__ function to read in the matrix, or create a matrix of 1's of a\n",
+        "    specific dimensionality. The class also includes a __repr__ function to\n",
+        "    designate the method for printing the matrix to the screen.\n",
         "    \"\"\"\n",
-        "    def __init__(self, value = {}, dim=(1,1)):\n",
-        "        if isinstance(value, list):\n",
-        "            if len(value)>0:\n",
-        "                if type(value[0]) is int or type(value[0]) is float:\n",
-        "                    row = (int, float)\n",
-        "                else:\n",
-        "                    row = type(value[0])\n",
-        "                for i in value:\n",
-        "                    if (type(i) is not int) & (type(i) is not float) & (type(i) is not list):\n",
-        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "                if row is list:\n",
-        "                    lenInner = len(value[0])\n",
-        "                    for i in value:\n",
-        "                        if len(i) is not lenInner:\n",
-        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
-        "\n",
-        "                        for j in i:\n",
-        "                            if (type(j) is not int) & (type(j) is not float):\n",
-        "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
+        "    def __init__(self, value=None, dim=(1,1)):\n",
+        "        if value is None:\n",
+        "            # Create a matrix of 1's based on provided dimensions\n",
+        "            self.value = [[1 for _ in range(dim[1])] for _ in range(dim[0])]\n",
+        "            self.shape = dim\n",
+        "        elif isinstance(value, list):\n",
+        "            # Determine if it's a vector or a matrix\n",
+        "            if all(isinstance(i, (int, float)) for i in value):  # It's a vector\n",
+        "                self.value = [[i] for i in value]\n",
+        "                self.shape = (len(value), 1)\n",
+        "            elif all(isinstance(i, list) for i in value):  # It's a matrix\n",
+        "                row_length = len(value[0])\n",
+        "                if not all(len(i) == row_length for i in value):\n",
+        "                    raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "                if not all(isinstance(j, (int, float)) for row in value for j in row):\n",
+        "                    raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
         "                self.value = value\n",
-        "                try:\n",
-        "                    self.shape = (len(value), len(value[0]))\n",
-        "                except:\n",
-        "                    self.shape = (len(value), 1)\n",
-        "        else:\n",
-        "            matrix = []\n",
-        "            for i in range(dim[0]):\n",
-        "                row = []\n",
-        "                for j in range(dim[1]):\n",
-        "                    row.append(1)\n",
-        "                matrix.append(row)\n",
-        "\n",
-        "                self.value = matrix\n",
-        "                self.shape = dim\n",
-        "\n",
-        "    \"\"\"\n",
-        "    Print the matrix to screen\n",
-        "    \"\"\"\n",
-        "    def __repr__(self):\n",
-        "        string = \"  \"\n",
-        "        shape = self.shape\n",
-        "        value = self.value\n",
-        "        for i in range(shape[0]):\n",
-        "            if shape[1]>1:\n",
-        "                if i < shape[0]-1:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(shape[1]):\n",
-        "                        string += str(value[i][j]) + \" \"\n",
-        "                    string += \"]\\n  \"\n",
-        "                else:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(shape[1]):\n",
-        "                        string += str(value[i][j]) + \" \"\n",
+        "                self.shape = (len(value), row_length)\n",
         "            else:\n",
-        "                if shape[0]==1:\n",
-        "                    string += \"[ \"\n",
-        "                if i < shape[0]-1:\n",
-        "                    if shape[1]>1:\n",
-        "                        string += \"[ \"\n",
-        "                    string += str(value[i]) + \"\\n  \"\n",
-        "                else:\n",
-        "                    string += str(value[i]) + \" \"\n",
-        "        if shape[1]>1:\n",
-        "            string += \"]\\n\\n\"\n",
-        "        return string"
+        "                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
+        "        else:\n",
+        "            raise TypeError(\"Invalid type for matrix values\")\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        matrix_str = \"  \"\n",
+        "        for row in self.value:\n",
+        "            matrix_str += \"[ \" + \" \".join(str(x) for x in row) + \" ]\\n  \"\n",
+        "        matrix_str = matrix_str.rstrip() + \"\\n\\n\"  # Remove trailing whitespace and add two newlines\n",
+        "        return matrix_str"
       ]
     },
     {
@@ -901,32 +858,32 @@
         "                else:\n",
         "                    row = type(value[0])\n",
         "                for i in value:\n",
-        "                    for i in value:\n",
-        "                      if (type(i) is not int) & (type(i) is not float) & (type(i) is not list):\n",
+        "                    if (type(i) is not int) & (type(i) is not float) & (type(i) is not list):\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
         "                    lenInner = len(value[0])\n",
         "                    for i in value:\n",
         "                        if len(i) is not lenInner:\n",
         "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "\n",
         "                        for j in i:\n",
-        "                            if type(j) is not int and type(j) is not float:\n",
+        "                            if (type(j) is not int) & (type(j) is not float):\n",
         "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
         "                self.value = value\n",
         "                try:\n",
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            else:\n",
-        "              matrix = []\n",
-        "              for i in range(dim[0]):\n",
-        "                        row = []\n",
-        "                        for j in range(dim[1]):\n",
-        "                            row.append(1)\n",
-        "                        matrix.append(row)\n",
+        "        else:\n",
+        "            matrix = []\n",
+        "            for i in range(dim[0]):\n",
+        "                row = []\n",
+        "                for j in range(dim[1]):\n",
+        "                    row.append(1)\n",
+        "                matrix.append(row)\n",
         "\n",
-        "                        self.value = matrix\n",
-        "                        self.shape = dim\n",
+        "                self.value = matrix\n",
+        "                self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
