--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -703,12 +703,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
-        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
+        "outputId": "d8efbb62-d758-4c42-c263-28b1aa564d3c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "  [ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "\n",
+            "\n",
+            "  [ 4 6 1 9 10 12 1 7 ]\n",
+            "  [ 1 2 3 4 5 6 7 8 ]\n",
+            "  [ 19 0 3 1 10 15 -1 -1 ]\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "#si-matrix\n",
         "\n",
@@ -749,7 +777,17 @@
         "        for row in self.value:\n",
         "            matrix_str += \"[ \" + \" \".join(str(x) for x in row) + \" ]\\n  \"\n",
         "        matrix_str = matrix_str.rstrip() + \"\\n\\n\"  # Remove trailing whitespace and add two newlines\n",
-        "        return matrix_str"
+        "        return matrix_str\n",
+        "\n",
+        "# Example :\n",
+        "mat1 = Matrix(dim=(10,10))\n",
+        "print(mat1)\n",
+        "\n",
+        "matrixList = [[4,6,1,9,10,12,1,7],\n",
+        "              [1,2,3,4,5,6,7,8],\n",
+        "              [19,0,3,1,10,15,-1,-1]]\n",
+        "mat2 = Matrix(matrixList)\n",
+        "print(mat2)"
       ]
     },
     {
